parser/sfeel/generated/sfeel_parser.go
// Code generated from SFeel.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // SFeel

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'('", "')'", "'-'", "'..'", "", "", "", "", "", "'<'", "'<='", "'>'",
	"'>='", "'['", "']'", "','", "'not'",
}
var symbolicNames = []string{
	"", "", "", "", "", "SIGN", "INTEGER", "FLOAT", "STRING", "BOOL", "LESS",
	"LESSEQ", "GREATER", "GREATEREQ", "RANGEIN", "RANGEOUT", "DISJUNCTION",
	"NEGATION", "DATEANDTIME", "FORMAT",
}

var ruleNames = []string{
	"entry", "validIntegerInput", "validNumberInput", "validStringInput", "validBoolInput",
	"validDateTimeInput", "validIntegerOutput", "validNumberOutput", "validStringOutput",
	"validBoolOutput", "validDateTimeOutput", "expression", "number", "strings",
	"bools", "datetime", "equalcomparison", "equalcomparisonInteger", "equalcomparisonNumber",
	"equalcomparisonBool", "equalcomparisonStrings", "equalcomparisonDateTime",
	"comparison", "comparisonOps", "comparisonInteger", "comparisonDateTime",
	"comparisonNumber", "ranges", "rop", "rangeInteger", "rangeNumber", "rangeDateTime",
	"disjunctions", "disjunctionsInteger", "disjunctionsNumber", "disjunctionsString",
	"disjunctionsDateTime", "negation",
}

type SFeelParser struct {
	*antlr.BaseParser
}

// NewSFeelParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *SFeelParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewSFeelParser(input antlr.TokenStream) *SFeelParser {
	this := new(SFeelParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "SFeel.g4"

	return this
}

// SFeelParser tokens.
const (
	SFeelParserEOF         = antlr.TokenEOF
	SFeelParserT__0        = 1
	SFeelParserT__1        = 2
	SFeelParserT__2        = 3
	SFeelParserT__3        = 4
	SFeelParserSIGN        = 5
	SFeelParserINTEGER     = 6
	SFeelParserFLOAT       = 7
	SFeelParserSTRING      = 8
	SFeelParserBOOL        = 9
	SFeelParserLESS        = 10
	SFeelParserLESSEQ      = 11
	SFeelParserGREATER     = 12
	SFeelParserGREATEREQ   = 13
	SFeelParserRANGEIN     = 14
	SFeelParserRANGEOUT    = 15
	SFeelParserDISJUNCTION = 16
	SFeelParserNEGATION    = 17
	SFeelParserDATEANDTIME = 18
	SFeelParserFORMAT      = 19
)

// SFeelParser rules.
const (
	SFeelParserRULE_entry                   = 0
	SFeelParserRULE_validIntegerInput       = 1
	SFeelParserRULE_validNumberInput        = 2
	SFeelParserRULE_validStringInput        = 3
	SFeelParserRULE_validBoolInput          = 4
	SFeelParserRULE_validDateTimeInput      = 5
	SFeelParserRULE_validIntegerOutput      = 6
	SFeelParserRULE_validNumberOutput       = 7
	SFeelParserRULE_validStringOutput       = 8
	SFeelParserRULE_validBoolOutput         = 9
	SFeelParserRULE_validDateTimeOutput     = 10
	SFeelParserRULE_expression              = 11
	SFeelParserRULE_number                  = 12
	SFeelParserRULE_strings                 = 13
	SFeelParserRULE_bools                   = 14
	SFeelParserRULE_datetime                = 15
	SFeelParserRULE_equalcomparison         = 16
	SFeelParserRULE_equalcomparisonInteger  = 17
	SFeelParserRULE_equalcomparisonNumber   = 18
	SFeelParserRULE_equalcomparisonBool     = 19
	SFeelParserRULE_equalcomparisonStrings  = 20
	SFeelParserRULE_equalcomparisonDateTime = 21
	SFeelParserRULE_comparison              = 22
	SFeelParserRULE_comparisonOps           = 23
	SFeelParserRULE_comparisonInteger       = 24
	SFeelParserRULE_comparisonDateTime      = 25
	SFeelParserRULE_comparisonNumber        = 26
	SFeelParserRULE_ranges                  = 27
	SFeelParserRULE_rop                     = 28
	SFeelParserRULE_rangeInteger            = 29
	SFeelParserRULE_rangeNumber             = 30
	SFeelParserRULE_rangeDateTime           = 31
	SFeelParserRULE_disjunctions            = 32
	SFeelParserRULE_disjunctionsInteger     = 33
	SFeelParserRULE_disjunctionsNumber      = 34
	SFeelParserRULE_disjunctionsString      = 35
	SFeelParserRULE_disjunctionsDateTime    = 36
	SFeelParserRULE_negation                = 37
)

// IEntryContext is an interface to support dynamic dispatch.
type IEntryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsEntryContext differentiates from other interfaces.
	IsEntryContext()
}

type EntryContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEntryContext() *EntryContext {
	var p = new(EntryContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SFeelParserRULE_entry
	return p
}

func (*EntryContext) IsEntryContext() {}

func NewEntryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EntryContext {
	var p = new(EntryContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SFeelParserRULE_entry

	return p
}

func (s *EntryContext) GetParser() antlr.Parser { return s.parser }

func (s *EntryContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *EntryContext) EOF() antlr.TerminalNode {
	return s.GetToken(SFeelParserEOF, 0)
}

func (s *EntryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EntryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EntryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterEntry(s)
	}
}

func (s *EntryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitEntry(s)
	}
}

func (s *EntryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitEntry(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SFeelParser) Entry() (localctx IEntryContext) {
	localctx = NewEntryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SFeelParserRULE_entry)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(76)
		p.Expression()
	}
	{
		p.SetState(77)
		p.Match(SFeelParserEOF)
	}

	return localctx
}

// IValidIntegerInputContext is an interface to support dynamic dispatch.
type IValidIntegerInputContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsValidIntegerInputContext differentiates from other interfaces.
	IsValidIntegerInputContext()
}

type ValidIntegerInputContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyValidIntegerInputContext() *ValidIntegerInputContext {
	var p = new(ValidIntegerInputContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SFeelParserRULE_validIntegerInput
	return p
}

func (*ValidIntegerInputContext) IsValidIntegerInputContext() {}

func NewValidIntegerInputContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ValidIntegerInputContext {
	var p = new(ValidIntegerInputContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SFeelParserRULE_validIntegerInput

	return p
}

func (s *ValidIntegerInputContext) GetParser() antlr.Parser { return s.parser }

func (s *ValidIntegerInputContext) CopyFrom(ctx *ValidIntegerInputContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *ValidIntegerInputContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ValidIntegerInputContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type NegationIntegerInputRuleContext struct {
	*ValidIntegerInputContext
}

func NewNegationIntegerInputRuleContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *NegationIntegerInputRuleContext {
	var p = new(NegationIntegerInputRuleContext)

	p.ValidIntegerInputContext = NewEmptyValidIntegerInputContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ValidIntegerInputContext))

	return p
}

func (s *NegationIntegerInputRuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NegationIntegerInputRuleContext) NEGATION() antlr.TerminalNode {
	return s.GetToken(SFeelParserNEGATION, 0)
}

func (s *NegationIntegerInputRuleContext) EOF() antlr.TerminalNode {
	return s.GetToken(SFeelParserEOF, 0)
}

func (s *NegationIntegerInputRuleContext) EqualcomparisonInteger() IEqualcomparisonIntegerContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEqualcomparisonIntegerContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEqualcomparisonIntegerContext)
}

func (s *NegationIntegerInputRuleContext) ComparisonInteger() IComparisonIntegerContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IComparisonIntegerContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IComparisonIntegerContext)
}

func (s *NegationIntegerInputRuleContext) RangeInteger() IRangeIntegerContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRangeIntegerContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRangeIntegerContext)
}

func (s *NegationIntegerInputRuleContext) DisjunctionsInteger() IDisjunctionsIntegerContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDisjunctionsIntegerContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDisjunctionsIntegerContext)
}

func (s *NegationIntegerInputRuleContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterNegationIntegerInputRule(s)
	}
}

func (s *NegationIntegerInputRuleContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitNegationIntegerInputRule(s)
	}
}

func (s *NegationIntegerInputRuleContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitNegationIntegerInputRule(s)

	default:
		return t.VisitChildren(s)
	}
}

type DisjunctionsIntegerInputRuleContext struct {
	*ValidIntegerInputContext
}

func NewDisjunctionsIntegerInputRuleContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *DisjunctionsIntegerInputRuleContext {
	var p = new(DisjunctionsIntegerInputRuleContext)

	p.ValidIntegerInputContext = NewEmptyValidIntegerInputContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ValidIntegerInputContext))

	return p
}

func (s *DisjunctionsIntegerInputRuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DisjunctionsIntegerInputRuleContext) DisjunctionsInteger() IDisjunctionsIntegerContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDisjunctionsIntegerContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDisjunctionsIntegerContext)
}

func (s *DisjunctionsIntegerInputRuleContext) EOF() antlr.TerminalNode {
	return s.GetToken(SFeelParserEOF, 0)
}

func (s *DisjunctionsIntegerInputRuleContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterDisjunctionsIntegerInputRule(s)
	}
}

func (s *DisjunctionsIntegerInputRuleContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitDisjunctionsIntegerInputRule(s)
	}
}

func (s *DisjunctionsIntegerInputRuleContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitDisjunctionsIntegerInputRule(s)

	default:
		return t.VisitChildren(s)
	}
}

type ComparisonIntegerInputRuleContext struct {
	*ValidIntegerInputContext
}

func NewComparisonIntegerInputRuleContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ComparisonIntegerInputRuleContext {
	var p = new(ComparisonIntegerInputRuleContext)

	p.ValidIntegerInputContext = NewEmptyValidIntegerInputContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ValidIntegerInputContext))

	return p
}

func (s *ComparisonIntegerInputRuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ComparisonIntegerInputRuleContext) ComparisonInteger() IComparisonIntegerContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IComparisonIntegerContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IComparisonIntegerContext)
}

func (s *ComparisonIntegerInputRuleContext) EOF() antlr.TerminalNode {
	return s.GetToken(SFeelParserEOF, 0)
}

func (s *ComparisonIntegerInputRuleContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterComparisonIntegerInputRule(s)
	}
}

func (s *ComparisonIntegerInputRuleContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitComparisonIntegerInputRule(s)
	}
}

func (s *ComparisonIntegerInputRuleContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitComparisonIntegerInputRule(s)

	default:
		return t.VisitChildren(s)
	}
}

type EqualComparisonIntegerInputRuleContext struct {
	*ValidIntegerInputContext
}

func NewEqualComparisonIntegerInputRuleContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *EqualComparisonIntegerInputRuleContext {
	var p = new(EqualComparisonIntegerInputRuleContext)

	p.ValidIntegerInputContext = NewEmptyValidIntegerInputContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ValidIntegerInputContext))

	return p
}

func (s *EqualComparisonIntegerInputRuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EqualComparisonIntegerInputRuleContext) EqualcomparisonInteger() IEqualcomparisonIntegerContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEqualcomparisonIntegerContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEqualcomparisonIntegerContext)
}

func (s *EqualComparisonIntegerInputRuleContext) EOF() antlr.TerminalNode {
	return s.GetToken(SFeelParserEOF, 0)
}

func (s *EqualComparisonIntegerInputRuleContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterEqualComparisonIntegerInputRule(s)
	}
}

func (s *EqualComparisonIntegerInputRuleContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitEqualComparisonIntegerInputRule(s)
	}
}

func (s *EqualComparisonIntegerInputRuleContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitEqualComparisonIntegerInputRule(s)

	default:
		return t.VisitChildren(s)
	}
}

type RangeComparisonIntegerInputRuleContext struct {
	*ValidIntegerInputContext
}

func NewRangeComparisonIntegerInputRuleContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *RangeComparisonIntegerInputRuleContext {
	var p = new(RangeComparisonIntegerInputRuleContext)

	p.ValidIntegerInputContext = NewEmptyValidIntegerInputContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ValidIntegerInputContext))

	return p
}

func (s *RangeComparisonIntegerInputRuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RangeComparisonIntegerInputRuleContext) RangeInteger() IRangeIntegerContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRangeIntegerContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRangeIntegerContext)
}

func (s *RangeComparisonIntegerInputRuleContext) EOF() antlr.TerminalNode {
	return s.GetToken(SFeelParserEOF, 0)
}

func (s *RangeComparisonIntegerInputRuleContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterRangeComparisonIntegerInputRule(s)
	}
}

func (s *RangeComparisonIntegerInputRuleContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitRangeComparisonIntegerInputRule(s)
	}
}

func (s *RangeComparisonIntegerInputRuleContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitRangeComparisonIntegerInputRule(s)

	default:
		return t.VisitChildren(s)
	}
}

type EmptyIntegerInputRuleContext struct {
	*ValidIntegerInputContext
}

func NewEmptyIntegerInputRuleContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *EmptyIntegerInputRuleContext {
	var p = new(EmptyIntegerInputRuleContext)

	p.ValidIntegerInputContext = NewEmptyValidIntegerInputContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ValidIntegerInputContext))

	return p
}

func (s *EmptyIntegerInputRuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EmptyIntegerInputRuleContext) EOF() antlr.TerminalNode {
	return s.GetToken(SFeelParserEOF, 0)
}

func (s *EmptyIntegerInputRuleContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterEmptyIntegerInputRule(s)
	}
}

func (s *EmptyIntegerInputRuleContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitEmptyIntegerInputRule(s)
	}
}

func (s *EmptyIntegerInputRuleContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitEmptyIntegerInputRule(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SFeelParser) ValidIntegerInput() (localctx IValidIntegerInputContext) {
	localctx = NewValidIntegerInputContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SFeelParserRULE_validIntegerInput)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(104)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		localctx = NewEqualComparisonIntegerInputRuleContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(79)
			p.EqualcomparisonInteger()
		}
		{
			p.SetState(80)
			p.Match(SFeelParserEOF)
		}

	case 2:
		localctx = NewComparisonIntegerInputRuleContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(82)
			p.ComparisonInteger()
		}
		{
			p.SetState(83)
			p.Match(SFeelParserEOF)
		}

	case 3:
		localctx = NewRangeComparisonIntegerInputRuleContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(85)
			p.RangeInteger()
		}
		{
			p.SetState(86)
			p.Match(SFeelParserEOF)
		}

	case 4:
		localctx = NewDisjunctionsIntegerInputRuleContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(88)
			p.disjunctionsInteger(0)
		}
		{
			p.SetState(89)
			p.Match(SFeelParserEOF)
		}

	case 5:
		localctx = NewNegationIntegerInputRuleContext(p, localctx)
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(91)
			p.Match(SFeelParserNEGATION)
		}
		{
			p.SetState(92)
			p.Match(SFeelParserT__0)
		}
		p.SetState(97)
		p.GetErrorHandler().Sync(p)
		switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
		case 1:
			{
				p.SetState(93)
				p.EqualcomparisonInteger()
			}

		case 2:
			{
				p.SetState(94)
				p.ComparisonInteger()
			}

		case 3:
			{
				p.SetState(95)
				p.RangeInteger()
			}

		case 4:
			{
				p.SetState(96)
				p.disjunctionsInteger(0)
			}

		}
		{
			p.SetState(99)
			p.Match(SFeelParserT__1)
		}
		{
			p.SetState(100)
			p.Match(SFeelParserEOF)
		}

	case 6:
		localctx = NewEmptyIntegerInputRuleContext(p, localctx)
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(102)
			p.Match(SFeelParserT__2)
		}
		{
			p.SetState(103)
			p.Match(SFeelParserEOF)
		}

	}

	return localctx
}

// IValidNumberInputContext is an interface to support dynamic dispatch.
type IValidNumberInputContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsValidNumberInputContext differentiates from other interfaces.
	IsValidNumberInputContext()
}

type ValidNumberInputContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyValidNumberInputContext() *ValidNumberInputContext {
	var p = new(ValidNumberInputContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SFeelParserRULE_validNumberInput
	return p
}

func (*ValidNumberInputContext) IsValidNumberInputContext() {}

func NewValidNumberInputContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ValidNumberInputContext {
	var p = new(ValidNumberInputContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SFeelParserRULE_validNumberInput

	return p
}

func (s *ValidNumberInputContext) GetParser() antlr.Parser { return s.parser }

func (s *ValidNumberInputContext) CopyFrom(ctx *ValidNumberInputContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *ValidNumberInputContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ValidNumberInputContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type ComparisonNumberInputRuleContext struct {
	*ValidNumberInputContext
}

func NewComparisonNumberInputRuleContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ComparisonNumberInputRuleContext {
	var p = new(ComparisonNumberInputRuleContext)
